syntax = "proto3";

package sensor;

import "google/protobuf/timestamp.proto";

option cc_enable_arenas = true;
option go_package = "./internalapi/sensor;sensor";

// A request message sent by collector to register with Sensor. Typically the first message in any streams.
message CollectorRegisterRequest {
  // The hostname on which collector is running.
  string hostname = 1;

  // A unique identifier for an instance of collector.
  string instance_id = 2;
}

enum ExternalIpsEnabled {
  DISABLED = 0;
  ENABLED = 1;
}

// CollectorConfig controls which type of data is reported by collector
// and how it is processed by collector. These configurations are used
// to fine-tune collector's performance on large scale clusters.
// At this time it only controls if external IPs are aggregated at the
// cluster level and the maximum number of open connections reported
// for each container per minute.
message CollectorConfig {
  message ExternalIPs {
    ExternalIpsEnabled enabled = 1;
  }

  message Networking {
    ExternalIPs external_ips = 1;
    int64 max_connections_per_minute = 2;
  }

  Networking networking = 1;
}

message ProcessSignal {
  // A unique UUID for identifying the message
  // We have this here instead of at the top level
  // because we want to have each message to be
  // self contained.
  string id = 1;

  // ID of container associated with this process
  string container_id = 2;

  // Process creation time
  google.protobuf.Timestamp creation_time = 3;

  // Process name
  string name = 4;

  // Process arguments
  string args = 5;

  // Process executable file path
  string exec_file_path = 6;

  // Host process ID
  uint32 pid = 7;

  // Real user ID
  uint32 uid = 8;

  // Real group ID
  uint32 gid = 9;

  // Signal origin
  bool scraped = 10;

  // Process LineageInfo
  repeated LineageInfo lineage_info = 11;

  message LineageInfo {
    uint32 parent_uid = 1;
    string parent_exec_file_path = 2;
  }
}
