syntax = "proto3";

package storage;

import "google/protobuf/timestamp.proto";
import "storage/process_indicator.proto";

option go_package = "./storage;storage";
option java_package = "io.stackrox.proto.storage";

message FileActivity {
  message File {
    string path = 1; // @gotags: search:"File Path"
    string host_path = 2; // @gotags: search:"File Host Path"
  }

  enum Operation {
    CREATE = 0;
    UNLINK = 1;
    RENAME = 2;
    PERMISSION_CHANGE = 3;
    OWNERSHIP_CHANGE = 4;
    WRITE = 5;
    OPEN = 6;
  }


  google.protobuf.Timestamp timestamp = 1;
  ProcessIndicator process = 2;
  Operation operation = 3; // @gotags: search:"File Operation"
  File file = 4;
  File moved = 5; // @gotags: search:"-"
  uint32 uid = 6;
  uint32 gid = 7;
  uint32 mode = 8;
  string username = 9;
  string group = 10;
}
